Baseline improvements with integration for Linear
